Mobile responsive, added a congratulation notification when winning, auto resets after 2.5 secs

--- a/index.html
+++ b/index.html
@@ -3,42 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rock Paper Scissors</title>
+    <title>Rock Paper Scissors Spock or Lizard!</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div class="content">
-      <div class="title">
-        <h1>Rock Paper Scissors Spock or Lizard!</h1>
-        <h2>First to 5 wins!</h2>
-        <h3 id="whowon"></h3>
-        <h4 id="whochosewhat"></h4>
-      </div>
+    <div id="main-content">
+      <div class="content">
+        <div class="title">
+          <h1 class="rpssl-title">Rock Paper Scissors Spock or Lizard!</h1>
+          <h2>First to 5 wins!</h2>
+          <h3 id="whowon"></h3>
+          <h4 id="whochosewhat"></h4>
+        </div>
 
-      <div class="options">
-        <button class="option shadow" data-choice="rock">
-          <img src="/images/rock-svgrepo-com.svg" alt="Rock" />
-        </button>
-        <button class="option shadow" data-choice="paper">
-          <img src="/images/paper-sheet-svgrepo-com.svg" alt="Paper" />
-        </button>
-        <button class="option shadow" data-choice="scissors">
-          <img src="/images/scissors-svgrepo-com.svg" alt="Scissors" />
-        </button>
-        <button class="option shadow-white" data-choice="spock">
-          <img src="/images/spock-hand-svgrepo-com.svg" alt="Spock" />
-        </button>
-        <button class="option shadow" data-choice="lizard">
-          <img src="/images/lizard-svgrepo-com.svg" alt="Lizard" />
-        </button>
-      </div>
+        <div class="options">
+          <button class="option shadow" data-choice="rock">
+            <img
+              src="/images/rock-svgrepo-com.svg"
+              alt="Rock"
+              draggable="false"
+            />
+          </button>
+          <button class="option shadow" data-choice="paper">
+            <img
+              src="/images/paper-sheet-svgrepo-com.svg"
+              alt="Paper"
+              draggable="false"
+            />
+          </button>
+          <button class="option shadow" data-choice="scissors">
+            <img
+              src="/images/scissors-svgrepo-com.svg"
+              alt="Scissors"
+              draggable="false"
+            />
+          </button>
+          <button class="option shadow-white" data-choice="spock">
+            <img
+              src="/images/spock-hand-svgrepo-com.svg"
+              alt="Spock"
+              draggable="false"
+            />
+          </button>
+          <button class="option shadow" data-choice="lizard">
+            <img
+              src="/images/lizard-svgrepo-com.svg"
+              alt="Lizard"
+              draggable="false"
+            />
+          </button>
+        </div>
 
-      <div class="score">
-        <p>Player Score: <span id="player-score">0</span></p>
-        <p>Computer Score: <span id="computer-score">0</span></p>
+        <div class="score">
+          <p>Player Score: <span id="player-score">0</span></p>
+          <p>Computer Score: <span id="computer-score">0</span></p>
+        </div>
       </div>
     </div>
 
+    <div id="celebration" class="celebration" style="display: none">
+      <h1>You Won</h1>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
