--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors Spock or Lizard!</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="main-content">
@@ -20,35 +20,35 @@
         <div class="options">
           <button class="option shadow" data-choice="rock">
             <img
-              src="../images/rock-svgrepo-com.svg"
+              src="./images/rock-svgrepo-com.svg"
               alt="Rock"
               draggable="false"
             />
           </button>
           <button class="option shadow" data-choice="paper">
             <img
-              src="../images/paper-sheet-svgrepo-com.svg"
+              src="./images/paper-sheet-svgrepo-com.svg"
               alt="Paper"
               draggable="false"
             />
           </button>
           <button class="option shadow" data-choice="scissors">
             <img
-              src="../images/scissors-svgrepo-com.svg"
+              src="./images/scissors-svgrepo-com.svg"
               alt="Scissors"
               draggable="false"
             />
           </button>
           <button class="option shadow-white" data-choice="spock">
             <img
-              src="../images/spock-hand-svgrepo-com.svg"
+              src="./images/spock-hand-svgrepo-com.svg"
               alt="Spock"
               draggable="false"
             />
           </button>
           <button class="option shadow" data-choice="lizard">
             <img
-              src="../images/lizard-svgrepo-com.svg"
+              src="./images/lizard-svgrepo-com.svg"
               alt="Lizard"
               draggable="false"
             />
